# model_svc

./: CMakeLists.txt  pull.sh  push.sh
src/: CMakeLists.txt  model_server.cpp
src/api/: api.cpp  model_client.cpp  model_server.cpp
src/api/protos/: algorithm.grpc.pb.cc  algorithm.grpc.pb.h  algorithm.pb.cc  algorithm.pb.h  algorithm.proto  gen_proto.sh  model.pb.cc  model.pb.h  model.proto
src/model/: manager.cpp  manager.h  model_common.h
src/test/: test_map.cpp  test_map.h
src_bk/: main.cpp
src_bk/api/: CMakeLists.txt  api.h  cmake.sh  model_server.cpp  model_server.h
src_bk/api.dSYM/Contents/Resources/DWARF/: api
src_bk/api/protos/: algorithm.grpc.pb.cc  algorithm.grpc.pb.h  algorithm.pb.cc  algorithm.pb.h  algorithm.proto  gen_proto.sh  model.grpc.pb.cc  model.grpc.pb.h  model.pb.cc  model.pb.h
src_bk/common/: model_common.h
src_bk/model/: manager.cpp  manager.h  model_manager.cpp
src_bk/test/: CMakeLists.txt  json_test.cpp  run.sh  test_map.cpp
