cmake_minimum_required(VERSION 3.23)
project(model_svc)

set(CMAKE_CXX_STANDARD 14)

include_directories(lib/ucloud_cambricon_sdk)
include_directories(lib/ucloud_cambricon_sdk/inner_utils)
include_directories(lib/ucloud_cambricon_sdk/jsoncpp/json)
include_directories(lib/ucloud_cambricon_sdk/main_backup)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Cholesky)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/CholmodSupport)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AltiVec)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX512)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/CUDA)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/Default)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/GPU)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/HIP)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/HIP/hcc)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/MSA)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/NEON)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SSE)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SVE)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SYCL)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/ZVector)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/functors)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/arch)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Householder)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/Jacobi)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/KLUSupport)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/LU)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/LU/arch)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/MetisSupport)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/misc)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/OrderingMethods)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/PardisoSupport)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/PaStiXSupport)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/QR)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCholesky)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseQR)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/SPQRSupport)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/StlSupport)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/SuperLUSupport)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/SVD)
include_directories(lib/ucloud_cambricon_sdk/third_party/Eigen/src/UmfPackSupport)
include_directories(lib/ucloud_cambricon_sdk/utils)
include_directories(lib/ucloud_cambricon_sdk/utils/bytetrack)
include_directories(lib/ucloud_cambricon_sdk/utils/json_encoder)

add_executable(model_svc
        lib/ucloud_cambricon_sdk/cmake/sanitizers/FindASan.cmake
        lib/ucloud_cambricon_sdk/cmake/sanitizers/FindMSan.cmake
        lib/ucloud_cambricon_sdk/cmake/sanitizers/FindSanitizers.cmake
        lib/ucloud_cambricon_sdk/cmake/sanitizers/FindTSan.cmake
        lib/ucloud_cambricon_sdk/cmake/sanitizers/FindUBSan.cmake
        lib/ucloud_cambricon_sdk/cmake/sanitizers/sanitize-helpers.cmake
        lib/ucloud_cambricon_sdk/cmake/cross-compile.cmake
        lib/ucloud_cambricon_sdk/cmake/FindFFmpeg.cmake
        lib/ucloud_cambricon_sdk/cmake/FindGFlags.cmake
        lib/ucloud_cambricon_sdk/cmake/FindGlog.cmake
        lib/ucloud_cambricon_sdk/cmake/FindLibRDKafka.cmake
        lib/ucloud_cambricon_sdk/inner_utils/inner_basic.cpp
        lib/ucloud_cambricon_sdk/inner_utils/inner_basic.hpp
        lib/ucloud_cambricon_sdk/inner_utils/ip_iqa_blur.cpp
        lib/ucloud_cambricon_sdk/inner_utils/ip_iqa_blur.hpp
        lib/ucloud_cambricon_sdk/inner_utils/ip_iqa_pose.cpp
        lib/ucloud_cambricon_sdk/inner_utils/ip_iqa_pose.hpp
        lib/ucloud_cambricon_sdk/inner_utils/module.cpp
        lib/ucloud_cambricon_sdk/inner_utils/module.hpp
        lib/ucloud_cambricon_sdk/inner_utils/postprocessor.cpp
        lib/ucloud_cambricon_sdk/inner_utils/postprocessor.hpp
        lib/ucloud_cambricon_sdk/jsoncpp/json/json-forwards.h
        lib/ucloud_cambricon_sdk/jsoncpp/json/json.h
        lib/ucloud_cambricon_sdk/jsoncpp/jsoncpp.cpp
        lib/ucloud_cambricon_sdk/main_backup/extraction_test.cpp
        lib/ucloud_cambricon_sdk/main_backup/test_detection_with_track.cpp
        lib/ucloud_cambricon_sdk/main_backup/test_factory.cpp
        lib/ucloud_cambricon_sdk/main_backup/test_factory_batch.cpp
        lib/ucloud_cambricon_sdk/main_backup/test_factory_face_recognition.cpp
        lib/ucloud_cambricon_sdk/main_backup/test_skeleton_detection.cpp
        lib/ucloud_cambricon_sdk/main_backup/test_yolo.cpp
        lib/ucloud_cambricon_sdk/main_backup/tvai_common.h
        lib/ucloud_cambricon_sdk/main_backup/unitest.cpp
        lib/ucloud_cambricon_sdk/main_backup/unitest_unet_post.cpp
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Cholesky/LDLT.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Cholesky/LLT.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Cholesky/LLT_LAPACKE.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/CholmodSupport/CholmodSupport.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AltiVec/Complex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AltiVec/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AltiVec/MatrixProduct.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AltiVec/MatrixProductCommon.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AltiVec/MatrixProductMMA.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AltiVec/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX/Complex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX/TypeCasting.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX512/Complex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX512/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX512/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/AVX512/TypeCasting.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/CUDA/Complex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/Default/BFloat16.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/Default/ConjHelper.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/Default/GenericPacketMathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/Default/GenericPacketMathFunctionsFwd.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/Default/Half.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/Default/Settings.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/Default/TypeCasting.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/GPU/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/GPU/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/GPU/TypeCasting.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/HIP/hcc/math_constants.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/MSA/Complex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/MSA/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/MSA/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/NEON/Complex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/NEON/GeneralBlockPanelKernel.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/NEON/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/NEON/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/NEON/TypeCasting.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SSE/Complex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SSE/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SSE/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SSE/TypeCasting.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SVE/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SVE/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SVE/TypeCasting.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SYCL/InteropHeaders.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SYCL/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SYCL/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SYCL/SyclMemoryModel.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/SYCL/TypeCasting.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/ZVector/Complex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/ZVector/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/arch/ZVector/PacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/functors/AssignmentFunctors.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/functors/BinaryFunctors.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/functors/NullaryFunctors.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/functors/StlFunctors.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/functors/TernaryFunctors.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/functors/UnaryFunctors.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/GeneralBlockPanelKernel.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/GeneralMatrixMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/GeneralMatrixMatrix_BLAS.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/GeneralMatrixMatrixTriangular.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/GeneralMatrixMatrixTriangular_BLAS.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/GeneralMatrixVector.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/GeneralMatrixVector_BLAS.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/Parallelizer.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/SelfadjointMatrixMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/SelfadjointMatrixMatrix_BLAS.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/SelfadjointMatrixVector.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/SelfadjointMatrixVector_BLAS.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/SelfadjointProduct.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/SelfadjointRank2Update.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/TriangularMatrixMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/TriangularMatrixMatrix_BLAS.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/TriangularMatrixVector.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/TriangularMatrixVector_BLAS.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/TriangularSolverMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/TriangularSolverMatrix_BLAS.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/products/TriangularSolverVector.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/BlasUtil.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/ConfigureVectorization.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/Constants.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/DisableStupidWarnings.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/ForwardDeclarations.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/IndexedViewHelper.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/IntegralConstant.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/Macros.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/Memory.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/Meta.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/MKL_support.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/NonMPL2.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/ReenableStupidWarnings.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/ReshapedHelper.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/StaticAssert.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/SymbolicIndex.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/util/XprHelper.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/ArithmeticSequence.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Array.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/ArrayBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/ArrayWrapper.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Assign.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Assign_MKL.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/AssignEvaluator.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/BandMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Block.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/BooleanRedux.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/CommaInitializer.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/ConditionEstimator.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/CoreEvaluators.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/CoreIterators.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/CwiseBinaryOp.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/CwiseNullaryOp.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/CwiseTernaryOp.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/CwiseUnaryOp.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/CwiseUnaryView.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/DenseBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/DenseCoeffsBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/DenseStorage.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Diagonal.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/DiagonalMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/DiagonalProduct.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Dot.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/EigenBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/ForceAlignedAccess.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Fuzzy.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/GeneralProduct.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/GenericPacketMath.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/GlobalFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/IndexedView.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Inverse.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/IO.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Map.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/MapBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/MathFunctions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/MathFunctionsImpl.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Matrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/MatrixBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/NestByValue.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/NoAlias.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/NumTraits.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/PartialReduxEvaluator.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/PermutationMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/PlainObjectBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Product.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/ProductEvaluators.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Random.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Redux.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Ref.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Replicate.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Reshaped.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/ReturnByValue.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Reverse.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Select.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/SelfAdjointView.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/SelfCwiseBinaryOp.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Solve.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/SolverBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/SolveTriangular.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/StableNorm.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/StlIterators.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Stride.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Swap.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Transpose.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Transpositions.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/TriangularMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/VectorBlock.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/VectorwiseOp.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Core/Visitor.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/ComplexEigenSolver.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/ComplexSchur.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/ComplexSchur_LAPACKE.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/EigenSolver.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/GeneralizedEigenSolver.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/GeneralizedSelfAdjointEigenSolver.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/HessenbergDecomposition.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/MatrixBaseEigenvalues.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/RealQZ.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/RealSchur.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/RealSchur_LAPACKE.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/SelfAdjointEigenSolver.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/SelfAdjointEigenSolver_LAPACKE.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Eigenvalues/Tridiagonalization.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/arch/Geometry_SIMD.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/AlignedBox.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/AngleAxis.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/EulerAngles.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/Homogeneous.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/Hyperplane.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/OrthoMethods.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/ParametrizedLine.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/Quaternion.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/Rotation2D.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/RotationBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/Scaling.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/Transform.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/Translation.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Geometry/Umeyama.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Householder/BlockHouseholder.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Householder/Householder.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Householder/HouseholderSequence.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers/BasicPreconditioners.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers/BiCGSTAB.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers/ConjugateGradient.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers/IncompleteCholesky.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers/IncompleteLUT.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers/IterativeSolverBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers/LeastSquareConjugateGradient.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/IterativeLinearSolvers/SolveWithGuess.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/Jacobi/Jacobi.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/KLUSupport/KLUSupport.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/LU/arch/InverseSize4.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/LU/Determinant.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/LU/FullPivLU.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/LU/InverseImpl.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/LU/PartialPivLU.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/LU/PartialPivLU_LAPACKE.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/MetisSupport/MetisSupport.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/misc/blas.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/misc/Image.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/misc/Kernel.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/misc/lapack.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/misc/lapacke.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/misc/lapacke_mangling.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/misc/RealSvd2x2.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/OrderingMethods/Amd.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/OrderingMethods/Eigen_Colamd.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/OrderingMethods/Ordering.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/PardisoSupport/PardisoSupport.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/PaStiXSupport/PaStiXSupport.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/ArrayCwiseBinaryOps.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/ArrayCwiseUnaryOps.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/BlockMethods.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/CommonCwiseBinaryOps.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/CommonCwiseUnaryOps.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/IndexedViewMethods.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/MatrixCwiseBinaryOps.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/MatrixCwiseUnaryOps.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/plugins/ReshapedMethods.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/QR/ColPivHouseholderQR.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/QR/ColPivHouseholderQR_LAPACKE.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/QR/CompleteOrthogonalDecomposition.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/QR/FullPivHouseholderQR.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/QR/HouseholderQR.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/QR/HouseholderQR_LAPACKE.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCholesky/SimplicialCholesky.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCholesky/SimplicialCholesky_impl.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/AmbiVector.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/CompressedStorage.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/ConservativeSparseSparseProduct.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/MappedSparseMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseAssign.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseBlock.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseColEtree.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseCompressedBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseCwiseBinaryOp.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseCwiseUnaryOp.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseDenseProduct.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseDiagonalProduct.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseDot.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseFuzzy.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseMap.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseMatrixBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparsePermutation.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseProduct.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseRedux.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseRef.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseSelfAdjointView.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseSolverBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseSparseProductWithPruning.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseTranspose.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseTriangularView.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseUtil.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseVector.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/SparseView.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseCore/TriangularSolver.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_column_bmod.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_column_dfs.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_copy_to_ucol.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_gemm_kernel.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_heap_relax_snode.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_kernel_bmod.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_Memory.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_panel_bmod.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_panel_dfs.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_pivotL.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_pruneL.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_relax_snode.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_Structs.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_SupernodalMatrix.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLU_Utils.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseLU/SparseLUImpl.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SparseQR/SparseQR.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SPQRSupport/SuiteSparseQRSupport.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/StlSupport/details.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/StlSupport/StdDeque.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/StlSupport/StdList.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/StlSupport/StdVector.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SuperLUSupport/SuperLUSupport.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SVD/BDCSVD.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SVD/JacobiSVD.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SVD/JacobiSVD_LAPACKE.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SVD/SVDBase.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/SVD/UpperBidiagonalization.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/src/UmfPackSupport/UmfPackSupport.h
        lib/ucloud_cambricon_sdk/third_party/Eigen/Cholesky
        lib/ucloud_cambricon_sdk/third_party/Eigen/CholmodSupport
        lib/ucloud_cambricon_sdk/third_party/Eigen/Core
        lib/ucloud_cambricon_sdk/third_party/Eigen/Dense
        lib/ucloud_cambricon_sdk/third_party/Eigen/Eigen
        lib/ucloud_cambricon_sdk/third_party/Eigen/Eigenvalues
        lib/ucloud_cambricon_sdk/third_party/Eigen/Geometry
        lib/ucloud_cambricon_sdk/third_party/Eigen/Householder
        lib/ucloud_cambricon_sdk/third_party/Eigen/IterativeLinearSolvers
        lib/ucloud_cambricon_sdk/third_party/Eigen/Jacobi
        lib/ucloud_cambricon_sdk/third_party/Eigen/KLUSupport
        lib/ucloud_cambricon_sdk/third_party/Eigen/LU
        lib/ucloud_cambricon_sdk/third_party/Eigen/MetisSupport
        lib/ucloud_cambricon_sdk/third_party/Eigen/OrderingMethods
        lib/ucloud_cambricon_sdk/third_party/Eigen/PardisoSupport
        lib/ucloud_cambricon_sdk/third_party/Eigen/PaStiXSupport
        lib/ucloud_cambricon_sdk/third_party/Eigen/QR
        lib/ucloud_cambricon_sdk/third_party/Eigen/QtAlignedMalloc
        lib/ucloud_cambricon_sdk/third_party/Eigen/Sparse
        lib/ucloud_cambricon_sdk/third_party/Eigen/SparseCholesky
        lib/ucloud_cambricon_sdk/third_party/Eigen/SparseCore
        lib/ucloud_cambricon_sdk/third_party/Eigen/SparseLU
        lib/ucloud_cambricon_sdk/third_party/Eigen/SparseQR
        lib/ucloud_cambricon_sdk/third_party/Eigen/SPQRSupport
        lib/ucloud_cambricon_sdk/third_party/Eigen/StdDeque
        lib/ucloud_cambricon_sdk/third_party/Eigen/StdList
        lib/ucloud_cambricon_sdk/third_party/Eigen/StdVector
        lib/ucloud_cambricon_sdk/third_party/Eigen/SuperLUSupport
        lib/ucloud_cambricon_sdk/third_party/Eigen/SVD
        lib/ucloud_cambricon_sdk/third_party/Eigen/UmfPackSupport
        lib/ucloud_cambricon_sdk/utils/bytetrack/BYTETracker.cpp
        lib/ucloud_cambricon_sdk/utils/bytetrack/BYTETracker.h
        lib/ucloud_cambricon_sdk/utils/bytetrack/dataType.h
        lib/ucloud_cambricon_sdk/utils/bytetrack/kalmanFilter.cpp
        lib/ucloud_cambricon_sdk/utils/bytetrack/kalmanFilter.h
        lib/ucloud_cambricon_sdk/utils/bytetrack/lapjv.cpp
        lib/ucloud_cambricon_sdk/utils/bytetrack/lapjv.h
        lib/ucloud_cambricon_sdk/utils/bytetrack/STrack.cpp
        lib/ucloud_cambricon_sdk/utils/bytetrack/STrack.h
        lib/ucloud_cambricon_sdk/utils/bytetrack/utils.cpp
        lib/ucloud_cambricon_sdk/utils/json_encoder/EnumToString.hpp
        lib/ucloud_cambricon_sdk/utils/json_encoder/json_encoder.cpp
        lib/ucloud_cambricon_sdk/utils/json_encoder/json_encoder.hpp
        lib/ucloud_cambricon_sdk/utils/json_encoder/json_proxy_template.hpp
        lib/ucloud_cambricon_sdk/utils/json_encoder/ucloud_json_format.hpp
        lib/ucloud_cambricon_sdk/utils/basic.cpp
        lib/ucloud_cambricon_sdk/utils/basic.hpp
        lib/ucloud_cambricon_sdk/utils/cluster.cpp
        lib/ucloud_cambricon_sdk/utils/cluster.hpp
        lib/ucloud_cambricon_sdk/utils/module_action_tsn_classify.cpp
        lib/ucloud_cambricon_sdk/utils/module_action_tsn_classify.hpp
        lib/ucloud_cambricon_sdk/utils/module_base.cpp
        lib/ucloud_cambricon_sdk/utils/module_base.hpp
        lib/ucloud_cambricon_sdk/utils/module_binary_classification.cpp
        lib/ucloud_cambricon_sdk/utils/module_binary_classification.hpp
        lib/ucloud_cambricon_sdk/utils/module_bytetrack.cpp
        lib/ucloud_cambricon_sdk/utils/module_bytetrack.hpp
        lib/ucloud_cambricon_sdk/utils/module_cascade_detection.cpp
        lib/ucloud_cambricon_sdk/utils/module_cascade_detection.hpp
        lib/ucloud_cambricon_sdk/utils/module_face_feature_extraction.cpp
        lib/ucloud_cambricon_sdk/utils/module_face_feature_extraction.hpp
        lib/ucloud_cambricon_sdk/utils/module_falling_detection.cpp
        lib/ucloud_cambricon_sdk/utils/module_falling_detection.hpp
        lib/ucloud_cambricon_sdk/utils/module_headpose.cpp
        lib/ucloud_cambricon_sdk/utils/module_headpose.hpp
        lib/ucloud_cambricon_sdk/utils/module_iqa.cpp
        lib/ucloud_cambricon_sdk/utils/module_iqa.hpp
        lib/ucloud_cambricon_sdk/utils/module_mlutrack.cpp
        lib/ucloud_cambricon_sdk/utils/module_mlutrack.hpp
        lib/ucloud_cambricon_sdk/utils/module_mod_traditional.cpp
        lib/ucloud_cambricon_sdk/utils/module_mod_traditional.hpp
        lib/ucloud_cambricon_sdk/utils/module_mod_unet2dshift.cpp
        lib/ucloud_cambricon_sdk/utils/module_mod_unet2dshift.hpp
        lib/ucloud_cambricon_sdk/utils/module_nn_match.cpp
        lib/ucloud_cambricon_sdk/utils/module_nn_match.hpp
        lib/ucloud_cambricon_sdk/utils/module_obj_feature_extraction.cpp
        lib/ucloud_cambricon_sdk/utils/module_obj_feature_extraction.hpp
        lib/ucloud_cambricon_sdk/utils/module_phoning_detection.cpp
        lib/ucloud_cambricon_sdk/utils/module_phoning_detection.hpp
        lib/ucloud_cambricon_sdk/utils/module_pspnet_water_segmentation.cpp
        lib/ucloud_cambricon_sdk/utils/module_pspnet_water_segmentation.hpp
        lib/ucloud_cambricon_sdk/utils/module_retinaface_detection.cpp
        lib/ucloud_cambricon_sdk/utils/module_retinaface_detection.hpp
        lib/ucloud_cambricon_sdk/utils/module_skeleton_detection.cpp
        lib/ucloud_cambricon_sdk/utils/module_skeleton_detection.hpp
        lib/ucloud_cambricon_sdk/utils/module_smoking_detection.cpp
        lib/ucloud_cambricon_sdk/utils/module_smoking_detection.hpp
        lib/ucloud_cambricon_sdk/utils/module_sos_action_detection.cpp
        lib/ucloud_cambricon_sdk/utils/module_sos_action_detection.hpp
        lib/ucloud_cambricon_sdk/utils/module_unet_water_segmentation.cpp
        lib/ucloud_cambricon_sdk/utils/module_unet_water_segmentation.hpp
        lib/ucloud_cambricon_sdk/utils/module_yolo_detection.cpp
        lib/ucloud_cambricon_sdk/utils/module_yolo_detection.hpp
        lib/ucloud_cambricon_sdk/utils/pipeline_framework.cpp
        lib/ucloud_cambricon_sdk/utils/pipeline_framework.hpp
        "lib/ucloud_cambricon_sdk/CMakeLists copy.txt"
        lib/ucloud_cambricon_sdk/CMakeLists.txt
        lib/ucloud_cambricon_sdk/config.hpp
        lib/ucloud_cambricon_sdk/get_models.cpp
        lib/ucloud_cambricon_sdk/lib_ar.sh
        lib/ucloud_cambricon_sdk/libai_core.cpp
        lib/ucloud_cambricon_sdk/libai_core.hpp
        lib/ucloud_cambricon_sdk/run_mlu220.sh
        lib/ucloud_cambricon_sdk/run_mlu270.sh
        lib/ucloud_cambricon_sdk/test_case_img_list.cpp
        lib/ucloud_cambricon_sdk/test_case_vid.cpp
        lib/ucloud_cambricon_sdk/test_case_vid_new.cpp
        lib/ucloud_cambricon_sdk/test_fight.cpp
        lib/ucloud_cambricon_sdk/test_fight_cascade.cpp
        lib/ucloud_cambricon_sdk/test_general_multithread.cpp
        lib/ucloud_cambricon_sdk/test_gkpw.cpp
        lib/ucloud_cambricon_sdk/test_one.cpp
        lib/ucloud_cambricon_sdk/test_one_new.cpp
        lib/ucloud_cambricon_sdk/test_thread.cpp
        lib/ucloud_cambricon_sdk/unitest.cpp
        lib/ucloud_cambricon_sdk/unitest_mempool.cpp
        src/model/model_manager.cpp
        src/main.cpp)

add_executable(scratch "/Users/freddyzhu/Library/Application Support/JetBrains/CLion2022.2/scratches/scratch.cpp")